<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_General" Id="{027beb7e-728e-4aeb-a930-890d17a65a81}">
    <Declaration><![CDATA[VAR_GLOBAL
	aStopPositions 				: ARRAY [GC.nNumMinMovers..GC.nNumMaxMovers] OF LREAL;// := [2400, 1700, 1000, 300];
	XtsOutterLoopOid			: OTCID := 16#1010480;
	XtsShortcutOid				: OTCID := 16#1010490;
                            	
//Configuration             	
	stMoverConfig				: ST_MoverConfig;
	stTrackGlobalConfig			: ST_TrackConfig;
	stPlanarTrackConfig			: ARRAY[GC.nNumMinTracks..GC.nNumMaxTracks] OF ST_PlanarTrackConfig;
	stTrackShortcutConfig		: ST_TrackShortcutConfig;
	stSwitchConfig				: ST_SwitchConfig;

//Status                    	
	stTrackShortcutStatus		: ST_TrackSectorStatus;
END_VAR

VAR_GLOBAL //PERSISTENT
	nNumMovers					: UDINT := 1;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>