<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_MoverLists" Id="{3d46ac49-9771-0d5f-1560-540f7e2a3064}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_MoverLists
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	aitfMovers : ARRAY[GC.nNumMinMovers..GVL_General.nNumMovers] OF I_Mover;
	SectorIndex	: UDINT;
	MoverIndex	: UDINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[FOR SectorIndex := GC.MIN_SECTOR_CT TO gc.MAX_SECTOR_CT BY 1 DO
	FOR MoverIndex := GC.nNumMinMovers TO GVL_General.nNumMovers BY 1 DO
		aitfMovers[GC.nNumMinMovers].P_TrackSectors.SectorStatus[SectorIndex].PercentOfSectorTraversed;
	END_FOR
END_FOR

//
]]></ST>
    </Implementation>
    <LineIds Name="FB_MoverLists">
      <LineId Id="3" Count="6" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>